Fixing the facebook alignment

--- a/WebApplication/iFlog/App_Themes/iflog/css/main_1024.css
+++ b/WebApplication/iFlog/App_Themes/iflog/css/main_1024.css
@@ -4478,6 +4478,5 @@ LineAdTextBox
     }
 
     .social-bar .facebook {
-        margin-left: 15px; 
         display: inline-block   
     }
